--- a/views/partials/frontend/account.hbs
+++ b/views/partials/frontend/account.hbs
@@ -10,7 +10,7 @@
                         <p>
                             Tên tài khoản
                         </p>
-                        <input id="accountEmail" type="email">
+                        <input disabled id="accountEmail" type="email">
                         <p>
                             Name
                         </p>
@@ -18,7 +18,7 @@
                         <p>
                             Phone
                         </p>
-                        <input id="accountPhone" type="text">
+                        <input id="accountPhone" type="number">
                         <p>
                             Address
                         </p>
