--- a/views/partials/frontend/product-detail.hbs
+++ b/views/partials/frontend/product-detail.hbs
@@ -392,18 +392,21 @@
 										<li><a href=""><i class="fa fa-clock-o"></i>12:41 PM</a></li>
 										<li><a href=""><i class="fa fa-calendar-o"></i>31 DEC 2014</a></li>
 									</ul>
-									<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+									{{#each comment}}
+									<p>{{name}}: {{content}}</p>
+									{{!-- <p>{{content}}</p> --}}
+									{{/each}}
 									<p><b>Write Your Review</b></p>
 									
-									<form action="#">
+									<form action="/product/detail/{{id}}" method="post">
 										<span>
-											<input type="text" placeholder="Your Name">
-											<input type="email" placeholder="Email Address">
+											<input type="text" name="textNameInput" placeholder="Your Name">
+											<input type="email" name="textEmailInput" placeholder="Email Address">
 										</span>
-										<textarea name=""></textarea>
+										<textarea name="textContentInput"></textarea>
 										<b>Xếp hạng: </b> <img src="images/product-details/rating.png" alt="">
-										<button type="button" class="btn btn-default pull-right">
-											Nộp
+										<button type="submit" class="btn btn-default pull-right">
+											Submit
 										</button>
 									</form>
 								</div>
