--- a/views/index.hbs
+++ b/views/index.hbs
@@ -73,118 +73,47 @@
 			<div class="col-sm-3">
 				<div class="left-sidebar">
 					<h2>Category</h2>
-					<div class="panel-group category-products" id="accordian">
-						<!--category-productsr-->
-						<div class="panel panel-default">
-							<div class="panel-heading">
-								<h4 class="panel-title">
-									<a data-toggle="collapse" data-parent="#accordian" href="#sportswear">
-										<span class="badge pull-right"><i class="fa fa-plus"></i></span>
-										Đồ thể thao
-									</a>
-								</h4>
-							</div>
-							<div id="sportswear" class="panel-collapse collapse">
-								<div class="panel-body">
-									<ul>
-										<li><a href="#">Nike </a></li>
-										<li><a href="#">Under Armour </a></li>
-										<li><a href="#">Adidas </a></li>
-										<li><a href="#">Puma</a></li>
-										<li><a href="#">ASICS </a></li>
-									</ul>
+						<div class="panel-group category-products" id="accordian"><!--category-productsr-->
+							{{#each dataCategory}}
+							<div class="panel panel-default">								
+								<div class="panel-heading">
+									<h4 class="panel-title">
+										{{!-- <a data-toggle="collapse" data-parent="#accordian" href="#sportswear">
+											{{!-- <span class="badge pull-right"><i class="fa fa-plus"></i></span> --}}
+											{{name}}
+										</a> --}}
+										<ul>
+											<li><a href="/product/?category={{id}}">{{name}} </a></li>
+										</ul>
+									</h4>
 								</div>
+								{{!-- <div id="sportswear" class="panel-collapse collapse">
+									<div class="panel-body">
+										{{#each dataTrademark}}										
+										<ul>
+											<li><a href="/product/?category=sport&&trademark=nike">{{this.name}} </a></li>
+										</ul>
+										{{/each}}
+									</div>
+								</div>								 --}}
 							</div>
+							{{/each}}
+							
 						</div>
-						<div class="panel panel-default">
-							<div class="panel-heading">
-								<h4 class="panel-title">
-									<a data-toggle="collapse" data-parent="#accordian" href="#mens">
-										<span class="badge pull-right"><i class="fa fa-plus"></i></span>
-										Nam
-									</a>
-								</h4>
-							</div>
-							<div id="mens" class="panel-collapse collapse">
-								<div class="panel-body">
-									<ul>
-										<li><a href="#">Fendi</a></li>
-										<li><a href="#">Guess</a></li>
-										<li><a href="#">Valentino</a></li>
-										<li><a href="#">Dior</a></li>
-										<li><a href="#">Versace</a></li>
-										<li><a href="#">Armani</a></li>
-										<li><a href="#">Prada</a></li>
-										<li><a href="#">Dolce and Gabbana</a></li>
-										<li><a href="#">Chanel</a></li>
-										<li><a href="#">Gucci</a></li>
-									</ul>
-								</div>
-							</div>
-						</div>
-
-						<div class="panel panel-default">
-							<div class="panel-heading">
-								<h4 class="panel-title">
-									<a data-toggle="collapse" data-parent="#accordian" href="#womens">
-										<span class="badge pull-right"><i class="fa fa-plus"></i></span>
-										Nữ
-									</a>
-								</h4>
-							</div>
-							<div id="womens" class="panel-collapse collapse">
-								<div class="panel-body">
-									<ul>
-										<li><a href="#">Fendi</a></li>
-										<li><a href="#">Guess</a></li>
-										<li><a href="#">Valentino</a></li>
-										<li><a href="#">Dior</a></li>
-										<li><a href="#">Versace</a></li>
-									</ul>
-								</div>
-							</div>
-						</div>
-						<div class="panel panel-default">
-							<div class="panel-heading">
-								<h4 class="panel-title"><a href="#">Trẻ em</a></h4>
-							</div>
-						</div>
-						<div class="panel panel-default">
-							<div class="panel-heading">
-								<h4 class="panel-title"><a href="#">Thời trang</a></h4>
-							</div>
-						</div>
-						<div class="panel panel-default">
-							<div class="panel-heading">
-								<h4 class="panel-title"><a href="#">Gia đình</a></h4>
-							</div>
-						</div>
-
-						<div class="panel panel-default">
-							<div class="panel-heading">
-								<h4 class="panel-title"><a href="#">Quần áo</a></h4>
-							</div>
-						</div>
-
-					</div>
+					
 					<!--/category-products-->
 
-					<div class="brands_products">
-						<!--brands_products-->
-						<h2>Thương hiệu</h2>
-						<div class="brands-name">
-							<ul class="nav nav-pills nav-stacked">
-								<li><a href="#"> <span class="pull-right">(50)</span>Nike</a></li>
-								<li><a href="#"> <span class="pull-right">(56)</span>Adidas</a></li>
-								<li><a href="#"> <span class="pull-right">(27)</span>Champion</a></li>
-								<li><a href="#"> <span class="pull-right">(32)</span>Gucci</a></li>
-								<li><a href="#"> <span class="pull-right">(5)</span>Louis Vuitton</a></li>
-								<li><a href="#"> <span class="pull-right">(9)</span>Dior</a></li>
-							</ul>
-						</div>
-					</div>
-					<!--/brands_products-->
-
+						<div class="brands_products"><!--brands_products-->
+							<h2>Thương hiệu	</h2>
+							<div class="brands-name">		
+							{{#each dataTrademark}}
+								<ul class="nav nav-pills nav-stacked">
+									<li><a href="/product/?trademark={{id}}"> <span class="pull-right"></span>{{name}}</a></li>
+								</ul>
+							{{/each}}		
+							</div>											
+						</div><!--/brands_products-->
+						
 					<div class="price-range">
 						<!--price-range-->
 						<h2>Phạm vi giá</h2>
@@ -232,119 +161,17 @@
 						</div>
 					</div>
 					{{/each}}
-					{{!-- <div class="col-sm-4">
-						<div class="product-image-wrapper">
-							<div class="single-products">
-								<div class="productinfo text-center">
-									<img src="images/home/product2.jpg" alt="" />
-									<h2>$56</h2>
-									<p>Easy Polo Black Edition</p>
-									<a href="#" class="btn btn-default add-to-cart"><i
-											class="fa fa-shopping-cart"></i>Thêm vào giỏ hàng</a>
-								</div>
-								<div class="product-overlay">
-									<div class="overlay-content">
-										<h2>$56</h2>
-										<p>Easy Polo Black Edition</p>
-										<a href="#" class="btn btn-default add-to-cart"><i
-												class="fa fa-shopping-cart"></i>Thêm vào giỏ hàng</a>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
-					<div class="col-sm-4">
-						<div class="product-image-wrapper">
-							<div class="single-products">
-								<div class="productinfo text-center">
-									<img src="images/home/product3.jpg" alt="" />
-									<h2>$56</h2>
-									<p>Easy Polo Black Edition</p>
-									<a href="#" class="btn btn-default add-to-cart"><i
-											class="fa fa-shopping-cart"></i>Thêm vào giỏ hàng</a>
-								</div>
-								<div class="product-overlay">
-									<div class="overlay-content">
-										<h2>$56</h2>
-										<p>Easy Polo Black Edition</p>
-										<a href="#" class="btn btn-default add-to-cart"><i
-												class="fa fa-shopping-cart"></i>Thêm vào giỏ hàng</a>
-									</div>
-								</div>
-							</div>
-
-						</div>
-					</div>
-					<div class="col-sm-4">
-						<div class="product-image-wrapper">
-							<div class="single-products">
-								<div class="productinfo text-center">
-									<img src="images/home/product4.jpg" alt="" />
-									<h2>$56</h2>
-									<p>Easy Polo Black Edition</p>
-									<a href="#" class="btn btn-default add-to-cart"><i
-											class="fa fa-shopping-cart"></i>Thêm vào giỏ hàng</a>
-								</div>
-								<div class="product-overlay">
-									<div class="overlay-content">
-										<h2>$56</h2>
-										<p>Easy Polo Black Edition</p>
-										<a href="#" class="btn btn-default add-to-cart"><i
-												class="fa fa-shopping-cart"></i>Thêm vào giỏ hàng</a>
-									</div>
-								</div>
-								<img src="images/home/new.png" class="new" alt="" />
-							</div>
-
-						</div>
-					</div>
-					<div class="col-sm-4">
-						<div class="product-image-wrapper">
-							<div class="single-products">
-								<div class="productinfo text-center">
-									<img src="images/home/product5.jpg" alt="" />
-									<h2>$56</h2>
-									<p>Easy Polo Black Edition</p>
-									<a href="#" class="btn btn-default add-to-cart"><i
-											class="fa fa-shopping-cart"></i>Thêm vào giỏ hàng</a>
-								</div>
-								<div class="product-overlay">
-									<div class="overlay-content">
-										<h2>$56</h2>
-										<p>Easy Polo Black Edition</p>
-										<a href="#" class="btn btn-default add-to-cart"><i
-												class="fa fa-shopping-cart"></i>Thêm vào giỏ hàng</a>
-									</div>
-								</div>
-								<img src="images/home/sale.png" class="new" alt="" />
-							</div>
-
-						</div>
-					</div>
-					<div class="col-sm-4">
-						<div class="product-image-wrapper">
-							<div class="single-products">
-								<div class="productinfo text-center">
-									<img src="images/home/product6.jpg" alt="" />
-									<h2>$56</h2>
-									<p>Easy Polo Black Edition</p>
-									<a href="#" class="btn btn-default add-to-cart"><i
-											class="fa fa-shopping-cart"></i>Thêm vào giỏ hàng</a>
-								</div>
-								<div class="product-overlay">
-									<div class="overlay-content">
-										<h2>$56</h2>
-										<p>Easy Polo Black Edition</p>
-										<a href="#" class="btn btn-default add-to-cart"><i
-												class="fa fa-shopping-cart"></i>Thêm vào giỏ hàng</a>
-									</div>
-								</div>
-							</div>
-
-						</div>
-					</div> --}}
-
+					
 				</div>
+				<nav aria-label="Page navigation example">
+				<ul class="pagination">
+					{{!-- <li class="page-item"><a class="page-link" href="#">Previous</a></li> --}}
+					{{#each numberPage}}
+					<li class="page-item"><a class="page-link" href="/?page={{page}}">{{page}}</a></li>
+					{{/each}}
+					{{!-- <li class="page-item"><a class="page-link" href="#">Next</a></li> --}}
+				</ul>
+				</nav>
 				<!--features_items-->
 
 				<div class="category-tab">
@@ -448,48 +275,7 @@
 								</div>
 							</div>
 							{{/each}}
-							{{!-- <div class="col-sm-3">
-								<div class="product-image-wrapper">
-									<div class="single-products">
-										<div class="productinfo text-center">
-											<img src="images/home/gallery4.jpg" alt="" />
-											<h2>$56</h2>
-											<p>Easy Polo Black Edition</p>
-											<a href="#" class="btn btn-default add-to-cart"><i
-													class="fa fa-shopping-cart"></i>Thêm vào giỏ hàng</a>
-										</div>
 
-									</div>
-								</div>
-							</div>
-							<div class="col-sm-3">
-								<div class="product-image-wrapper">
-									<div class="single-products">
-										<div class="productinfo text-center">
-											<img src="images/home/gallery3.jpg" alt="" />
-											<h2>$56</h2>
-											<p>Easy Polo Black Edition</p>
-											<a href="#" class="btn btn-default add-to-cart"><i
-													class="fa fa-shopping-cart"></i>Thêm vào giỏ hàng</a>
-										</div>
-
-									</div>
-								</div>
-							</div>
-							<div class="col-sm-3">
-								<div class="product-image-wrapper">
-									<div class="single-products">
-										<div class="productinfo text-center">
-											<img src="images/home/gallery1.jpg" alt="" />
-											<h2>$56</h2>
-											<p>Easy Polo Black Edition</p>
-											<a href="#" class="btn btn-default add-to-cart"><i
-													class="fa fa-shopping-cart"></i>Thêm vào giỏ hàng</a>
-										</div>
-
-									</div>
-								</div>
-							</div> --}}
 						</div>
 					</div>
 				</div>
@@ -508,7 +294,7 @@
 										<div class="single-products">
 											<div class="productinfo text-center">
 												<img src="/img/upload/{{image}}" alt="" width="255.48" height="255.48"/>
-												<h2>${{price}}</h2>
+												<h2>{{price}} VND</h2>
 												<p>{{name}}</p>
 												<a href="/product/detail/{{id}}" class="btn btn-default add-to-cart"><i
 														class="fa fa-shopping-cart"></i>Thêm Chi Tiết</a>
@@ -550,5 +336,5 @@
 		</div>
 	</div>
 </section>
-
+<script src=""></script>
 </body>
