--- a/views/partials/frontend/product.hbs
+++ b/views/partials/frontend/product.hbs
@@ -94,7 +94,7 @@
 						<ul class="pagination">
 							{{!-- <li class="page-item"><a class="page-link" href="#">Previous</a></li> --}}
 						{{#each numberPage}}
-						<li class="page-item"><a class="page-link" href="/?page={{page}}">{{page}}</a></li>
+						<li class="page-item"><a class="page-link" href="/product/{{link}}&page={{page}}">{{page}}</a></li>
 						{{/each}}
 							{{!-- <li class="page-item"><a class="page-link" href="#">Next</a></li> --}}
 						</ul>
