view and recomend

--- a/views/partials/frontend/product-detail.hbs
+++ b/views/partials/frontend/product-detail.hbs
@@ -143,6 +143,7 @@
 										Thêm vào giỏ hàng
 									</button>
 								</span>
+								<p><b>Lượt Xem:</b> {{views}}</p>
 
 								{{!-- <p><b>Trạng thái:</b> Trong kho</p>
 								<p><b>Tình trạng:</b> Mới</p>
@@ -346,54 +347,57 @@
 						</div>
 					</div><!--/category-tab-->
 					
-					<div class="recommended_items"><!--recommended_items-->
-						<h2 class="title text-center">Đề xuất sản phẩm</h2>
-						
-						<div id="recommended-item-carousel" class="carousel slide" data-ride="carousel">
-							<div class="carousel-inner">
-								<div class="item active">	
-									{{#each dataRe}}
-									<div class="col-sm-4">
-										<div class="product-image-wrapper">
-											<div class="single-products">
-												<div class="productinfo text-center">
-													<img src="/img/upload/{{image}}" alt="" width="255.48" height="255.48"/>
-													<h2>${{price}}</h2>
-													<p>{{name}}</p>
-													<a href="/product/detail/{{id}}" class="btn btn-default add-to-cart"><i
-															class="fa fa-shopping-cart"></i>Xem Chi Tiết</a>
-												</div>
+				<div class="recommended_items">
+					<!--recommended_items-->
+					<h2 class="title text-center">recommended items</h2>
+
+					<div id="recommended-item-carousel" class="carousel slide" data-ride="carousel">
+						<div class="carousel-inner">							
+							<div class="item active">
+								{{#each dataRecommend1}}
+								<div class="col-sm-4">
+									<div class="product-image-wrapper">
+										<div class="single-products">
+											<div class="productinfo text-center">
+												<img src="/img/upload/{{image}}" alt="" width="255.48" height="255.48"/>
+												<h2>{{price}} VND</h2>
+												<p>{{name}}</p>
+												<a href="/product/detail/{{id}}" class="btn btn-default add-to-cart"><i
+														class="fa fa-shopping-cart"></i>Thêm Chi Tiết</a>
 											</div>
 										</div>
 									</div>
-									{{/each}}
 								</div>
-								<div class="item">	
-									{{#each dataRe2}}
-									<div class="col-sm-4">
-										<div class="product-image-wrapper">
-											<div class="single-products">
-												<div class="productinfo text-center">
-													<img src="/img/upload/{{image}}" alt="" width="255.48" height="255.48"/>
-													<h2>${{price}}</h2>
-													<p>{{name}}</p>
-													<a href="/product/detail/{{id}}" class="btn btn-default add-to-cart"><i
-															class="fa fa-shopping-cart"></i>Xem Chi Tiết</a>
-												</div>
-											</div>
-										</div>
-									</div>
-									{{/each}}
-								</div>
+								{{/each}}
 							</div>
-							 <a class="left recommended-item-control" href="#recommended-item-carousel" data-slide="prev">
-								<i class="fa fa-angle-left"></i>
-							  </a>
-							  <a class="right recommended-item-control" href="#recommended-item-carousel" data-slide="next">
-								<i class="fa fa-angle-right"></i>
-							  </a>			
+							<div class="item">
+								{{#each dataRecommend2}}
+								<div class="col-sm-4">
+									<div class="product-image-wrapper">
+										<div class="single-products">
+											<div class="productinfo text-center">
+												<img src="/img/upload/{{image}}" alt="" width="255.48" height="255.48"/>
+												<h2>${{price}}</h2>
+												<p>{{name}}</p>
+												<a href="/product/detail/{{id}}" class="btn btn-default add-to-cart"><i
+														class="fa fa-shopping-cart"></i>Xem Chi Tiết</a>
+											</div>
+										</div>
+									</div>
+								</div>
+								{{/each}}
+							</div>
 						</div>
-					</div><!--/recommended_items-->
+						<a class="left recommended-item-control" href="#recommended-item-carousel" data-slide="prev">
+							<i class="fa fa-angle-left"></i>
+						</a>
+						<a class="right recommended-item-control" href="#recommended-item-carousel" data-slide="next">
+							<i class="fa fa-angle-right"></i>
+						</a>
+					</div>
+				</div>
+				<!--/recommended_items-->
+
 					
 				</div>
 			</div>
