--- a/views/partials/frontend/blog.hbs
+++ b/views/partials/frontend/blog.hbs
@@ -4,113 +4,44 @@
             <div class="col-sm-3">
                 <div class="left-sidebar">
                     <h2>Category</h2>
-                    <div class="panel-group category-products" id="accordian"><!--category-productsr-->
-                        <div class="panel panel-default">
-                            <div class="panel-heading">
-                                <h4 class="panel-title">
-                                    <a data-toggle="collapse" data-parent="#accordian" href="#sportswear">
-                                        <span class="badge pull-right"><i class="fa fa-plus"></i></span>
-                                        Đồ thể thao
-                                    </a>
-                                </h4>
-                            </div>
-                            <div id="sportswear" class="panel-collapse collapse">
-                                <div class="panel-body">
-                                    <ul>
-                                        <li><a href="#">Nike </a></li>
-                                        <li><a href="#">Under Armour </a></li>
-                                        <li><a href="#">Adidas </a></li>
-                                        <li><a href="#">Puma</a></li>
-                                        <li><a href="#">ASICS </a></li>
-                                    </ul>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="panel panel-default">
-                            <div class="panel-heading">
-                                <h4 class="panel-title">
-                                    <a data-toggle="collapse" data-parent="#accordian" href="#mens">
-                                        <span class="badge pull-right"><i class="fa fa-plus"></i></span>
-                                        Nam
-                                    </a>
-                                </h4>
-                            </div>
-                            <div id="mens" class="panel-collapse collapse">
-                                <div class="panel-body">
-                                    <ul>
-                                        <li><a href="#">Fendi</a></li>
-                                        <li><a href="#">Guess</a></li>
-                                        <li><a href="#">Valentino</a></li>
-                                        <li><a href="#">Dior</a></li>
-                                        <li><a href="#">Versace</a></li>
-                                        <li><a href="#">Armani</a></li>
-                                        <li><a href="#">Prada</a></li>
-                                        <li><a href="#">Dolce and Gabbana</a></li>
-                                        <li><a href="#">Chanel</a></li>
-                                        <li><a href="#">Gucci</a></li>
-                                    </ul>
-                                </div>
-                            </div>
-                        </div>
-                        
-                        <div class="panel panel-default">
-                            <div class="panel-heading">
-                                <h4 class="panel-title">
-                                    <a data-toggle="collapse" data-parent="#accordian" href="#womens">
-                                        <span class="badge pull-right"><i class="fa fa-plus"></i></span>
-                                        Nữ
-                                    </a>
-                                </h4>
-                            </div>
-                            <div id="womens" class="panel-collapse collapse">
-                                <div class="panel-body">
-                                    <ul>
-                                        <li><a href="#">Fendi</a></li>
-                                        <li><a href="#">Guess</a></li>
-                                        <li><a href="#">Valentino</a></li>
-                                        <li><a href="#">Dior</a></li>
-                                        <li><a href="#">Versace</a></li>
-                                    </ul>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="panel panel-default">
-                            <div class="panel-heading">
-                                <h4 class="panel-title"><a href="#">Trẻ em</a></h4>
-                            </div>
-                        </div>
-                        <div class="panel panel-default">
-                            <div class="panel-heading">
-                                <h4 class="panel-title"><a href="#">Thời trang</a></h4>
-                            </div>
-                        </div>
-                        <div class="panel panel-default">
-                            <div class="panel-heading">
-                                <h4 class="panel-title"><a href="#">Gia đình</a></h4>
-                            </div>
-                        </div>
-    
-                        <div class="panel panel-default">
-                            <div class="panel-heading">
-                                <h4 class="panel-title"><a href="#">Quần áo</a></h4>
-                            </div>
-                        </div>
-            
-                    </div><!--/category-products-->
-                
-                    <div class="brands_products"><!--brands_products-->
-                        <h2>Thương hiệu</h2>
-                        <div class="brands-name">
-                            <ul class="nav nav-pills nav-stacked">
-                                <li><a href="#"> <span class="pull-right">(50)</span>Nike</a></li>
-                                <li><a href="#"> <span class="pull-right">(56)</span>Adidas</a></li>
-                                <li><a href="#"> <span class="pull-right">(27)</span>Champion</a></li>
-                                <li><a href="#"> <span class="pull-right">(32)</span>Gucci</a></li>
-                                <li><a href="#"> <span class="pull-right">(5)</span>Louis Vuitton</a></li>
-                                <li><a href="#"> <span class="pull-right">(9)</span>Dior</a></li>
-                            </ul>
-                        </div>
-                    </div><!--/brands_products-->
+						<div class="panel-group category-products" id="accordian"><!--category-productsr-->
+							{{#each dataCategory}}
+							<div class="panel panel-default">								
+								<div class="panel-heading">
+									<h4 class="panel-title">
+										{{!-- <a data-toggle="collapse" data-parent="#accordian" href="#sportswear">
+											{{!-- <span class="badge pull-right"><i class="fa fa-plus"></i></span> --}}
+											{{name}}
+										</a> --}}
+										<ul>
+											<li><a href="/product/?category={{id}}">{{name}} </a></li>
+										</ul>
+									</h4>
+								</div>
+								{{!-- <div id="sportswear" class="panel-collapse collapse">
+									<div class="panel-body">
+										{{#each dataTrademark}}										
+										<ul>
+											<li><a href="/product/?category=sport&&trademark=nike">{{this.name}} </a></li>
+										</ul>
+										{{/each}}
+									</div>
+								</div>								 --}}
+							</div>
+							{{/each}}
+							
+						</div><!--/category-productsr-->
+					
+						<div class="brands_products"><!--brands_products-->
+							<h2>Thương hiệu	</h2>
+							<div class="brands-name">		
+							{{#each dataTrademark}}
+								<ul class="nav nav-pills nav-stacked">
+									<li><a href="/product/?trademark={{id}}"> <span class="pull-right"></span>{{name}}</a></li>
+								</ul>
+							{{/each}}		
+							</div>											
+						</div><!--/brands_products-->
                     
                     <div class="price-range"><!--price-range-->
                         <h2>Phạm vi giá</h2>
