--- a/views/admin/products/edit.hbs
+++ b/views/admin/products/edit.hbs
@@ -13,7 +13,7 @@
                     <div class="form-group">
                         <label for="exampleInputEmail1">Id</label>
                         <input type="text" disabled class="form-control" id="exampleInputId" aria-describedby="emailHelp"
-                            name="name" value="{{id}}">
+                            name="id" value="{{id}}">
                     </div>
                     <div class="form-group">
                         <label for="exampleInputEmail1">Name</label>
