--- a/views/partials/admin/login.hbs
+++ b/views/partials/admin/login.hbs
@@ -66,6 +66,9 @@
                                     <div class="text-center">
                                         <a class="small" href="/admin/register">Tạo tài khoản!</a>
                                     </div>
+                                    <div class="text-center">
+                                        <a class="small" href="/admin/fogotpassword">Quên mật khẩu!</a>
+                                    </div>
                                 </div>
                             </div>
                         </div>
