--- a/views/admin/products/create.hbs
+++ b/views/admin/products/create.hbs
@@ -2,7 +2,7 @@
     <div class="card-header py-3">
         <div class="row">
             <div class="col-sm-11">
-                <h6 class="m-0 font-weight-bold text-primary">List Product</h6>
+                <h6 class="m-0 font-weight-bold text-primary">Add Product</h6>
             </div>
             {{!-- <div class="col-sm-1">
                 <a style="font-size: 12px;" class="btn btn-info" href="/admin/product/create">Create Product</a>
