--- a/views/partials/admin/admin.hbs
+++ b/views/partials/admin/admin.hbs
@@ -358,13 +358,13 @@
                         <li class="nav-item dropdown no-arrow">
                             <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button"
                                 data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                <input type="text" disabled id="nameAdminLogin" class="mr-2 d-none d-lg-inline text-gray-600 small"></input>
+                                <span id="authorAdminLogin" class="mr-2 d-none d-lg-inline text-gray-600 small">{{nameAdmin}}</span>                               
                                 <img class="img-profile rounded-circle" src="img/undraw_profile.svg">
                             </a>
                             <!-- Dropdown - User Information -->
                             <div class="dropdown-menu dropdown-menu-right shadow animated--grow-in"
                                 aria-labelledby="userDropdown">
-                                <a class="dropdown-item" href="#">
+                                <a class="dropdown-item" href="/admin/account">
                                     <i class="fas fa-user fa-sm fa-fw mr-2 text-gray-400"></i>
                                     Hồ sơ
                                 </a>
@@ -377,7 +377,7 @@
                                     Hoạt động đăng nhập
                                 </a>
                                 <div class="dropdown-divider"></div>
-                                <a class="dropdown-item" href="#" data-toggle="modal" data-target="#logoutModal">
+                                <a class="dropdown-item" href="/admin/logout" data-toggle="modal" data-target="#logoutModal">
                                     <i class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-gray-400"></i>
                                     Đăng xuất
                                 </a>
@@ -748,7 +748,7 @@
                 </div>
                 <div class="modal-footer">
                     <button class="btn btn-secondary" type="button" data-dismiss="modal">Cancel</button>
-                    <a class="btn btn-primary" id="logoutAdmin" href="/adminauth/logout">Đăng xuất</a>
+                    <a class="btn btn-primary" id="logoutAdmin" href="/admin/logout">Đăng xuất</a>
                 </div>
             </div>
         </div>
