--- a/views/partials/frontend/product-detail.hbs
+++ b/views/partials/frontend/product-detail.hbs
@@ -409,6 +409,7 @@
 <script src="js/price-range.js"></script>
 <script src="js/jquery.prettyPhoto.js"></script>
 <script src="js/main.js"></script>
-<script src="js/cart/quantily.js"></script>
+<script src="/js/user/main.js"></script>
+<script src="/js/cart/quantily.js"></script>
 
 </html>
