--- a/views/partials/frontend/login.hbs
+++ b/views/partials/frontend/login.hbs
@@ -31,6 +31,7 @@
 						<input id="registerPhone" type="text" placeholder="Số Điện Thoại">
 						<input id="registerAddress" type="text" placeholder="Địa Chỉ">				
 						<input id="registerPass" type="password" placeholder="Mật khẩu">
+						<input id="registerReInputPass" type="password" placeholder="Nhập Lại Mật khẩu">
 						<button type="submit" class="btn btn-default">Đăng ký</button>
 					</form>
 				</div>
