forgopass and reset

--- a/views/admin/client/client.hbs
+++ b/views/admin/client/client.hbs
@@ -38,6 +38,9 @@
                                         aria-label="Age: activate to sort column ascending" style="width: 100.453px;">
                                         Created</th>
                                     <th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1"
+                                        aria-label="Age: activate to sort column ascending" style="width: 100.453px;">
+                                        Locked</th>
+                                    <th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1"
                                         aria-label="Position: activate to sort column ascending"
                                         style="width: 429.484px;">Action</th>
 
@@ -51,8 +54,9 @@
                                     <td>{{name}}</td>
                                     <td>{{email}}</td>
                                     <td>{{phone}}</td>
-                                    <td>{{address}}</td>
+                                    <td>{{address}}</td>                         
                                     <td>{{created}}</td>
+                                    <td>{{locked}}</td>
 
                                     <td>
                                         <a class="btn btn-success edit" href="/admin/client/edit/{{id}}">Edit</a>
