--- a/views/partials/frontend/change-password.hbs
+++ b/views/partials/frontend/change-password.hbs
@@ -5,31 +5,26 @@
             <div class="col-sm-12 col-sm-offset-1">
                 <div class="login-form">
                     <!--login form-->
-                    <h2>Thông tin tài khoản</h2>
+                    <h2>Đổi Mật Khẩu</h2>
                     <form id="loginUserForm" action="#">
                         <p>
                             Tên tài khoản
                         </p>
                         <input disabled id="accountEmail" type="email">
                         <p>
-                            Name
+                            Mật khẩu cũ
                         </p>
-                        <input id="accountName" type="text">
+                        <input id="passwordOld" type="password">
                         <p>
-                            Phone
+                            Mật khẩu mới
                         </p>
-                        <input id="accountPhone" type="number">
+                        <input id="passwordNew" type="password">
                         <p>
-                            Address
+                            Nhập Mật khẩu mới
                         </p>
-                        <input id="accountAddress" type="text">
-                        <p>
-                            Created
-                        </p>
-                        <input id="accountCreated" disabled type="text">
-                        <a type="button" href="/changepassword">Đổi Mật Khẩu</a>
-                        <button type="button" id="buttonEditInforUser">Lưu lại</button>    
-                        
+                        <input id="rePasswordNew" type="password">
+
+                        <button type="button" id="buttonChangePasswordUser">Đổi Mật Khẩu</button>
                     </form>
                 </div>
                 <!--/login form-->
@@ -37,6 +32,6 @@
         </div>
     </div>
 </section>
-<script src="js/user/account.js">
+<script src="js/user/changepassword.js">
 
 </script>
