--- a/views/admin/client/editclient.hbs
+++ b/views/admin/client/editclient.hbs
@@ -33,11 +33,18 @@
                         <label for="exampleInputPassword1">Phone</label>
                         <input type="number" class="form-control" id="exampleInputPhoneEdit" name="phone" value="{{data.phone}}">
                     </div>
-                      <div class="form-group">
+                    <div class="form-group">
                         <label for="exampleInputPassword1">Address</label>
                         <input type="text" class="form-control" id="exampleInputAddressEdit" name="address" value="{{data.address}}">
                     </div>
-                      
+                    <div class="form-group">
+                        <label for="exampleInputPassword1">Locked</label>                 
+                        <select name="category" id="lockedSelected" class="form-select" aria-label="Default select example">
+                            <option value="0">Mở khóa</option>
+                            <option value="1">Khóa</option>
+                        </select>
+                    </div>
+                  
                     <button type="button" class="btn btn-primary" id="editClientByAdmin" value="Update">Submit</button>
                 </form>
             </div>
