--- a/views/partials/frontend/forgotPass.hbs
+++ b/views/partials/frontend/forgotPass.hbs
@@ -42,7 +42,7 @@
                                         <div class="form-group">
                                             <input type="email" class="form-control form-control-user" id="exampleInputEmail" aria-describedby="emailHelp" placeholder="Enter Email Address...">
                                         </div>
-                                        <a href="login.html" class="btn btn-primary btn-user btn-block">
+                                        <a type="button" id="resetPasswordUser"class="btn btn-primary btn-user btn-block">
                                             Reset Password
                                         </a>
                                     </form>
@@ -74,6 +74,7 @@
 
     <!-- Custom scripts for all pages-->
     <script src="js/sb-admin-2.min.js"></script>
+    <script src="js/user/forgotpass.js"></script>
 
 <!-- Code injected by live-server -->
 <script type="text/javascript">
