--- a/views/partials/frontend/login.hbs
+++ b/views/partials/frontend/login.hbs
@@ -14,6 +14,7 @@
 							Giữ cho tôi đăng nhập
 						</span>
 						<button type="submit" class="btn btn-default">Đăng nhập</button>
+						<a type="button" href="/forgotpassword">Quên Mật Khẩu</a>
 					</form>
 				</div>
 				<!--/login form-->
