--- a/views/admin/products/create.hbs
+++ b/views/admin/products/create.hbs
@@ -12,27 +12,27 @@
     <div class="card-body">
         <div style="overflow: hidden;" class="table-responsive">
             <div id="dataTable_wrapper" class="dataTables_wrapper dt-bootstrap4">
-                <form action="/admin/product/create" method="post" id="createForm" enctype="multipart/form-data">
+                <form action="/admin/product/create" method="post" id="createForm" enctype="multipart/form-data" role="form" data-toggle="validator">
                     <div class="form-group">
                         <label for="exampleInputEmail1">Name products</label>
                         <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
-                             name="name" value="{{name}}">
+                             name="name" value="{{name}}" >
                         <small id="emailHelp" class="form-text text-muted"></small>
                     </div>
                     <div class="form-group">
                         <label for="exampleInputPassword1">Quanlity</label>
                         <input type="quanlity" class="form-control" id="exampleInputQuanlity" 
-                            name="quanlity" value="{{quanlity}}">
+                            name="quanlity" value="{{quanlity}}" >
                     </div>
                     <div class="form-group">
                         <label for="exampleInputPassword1">Size</label>
                         <input type="text" class="form-control" id="exampleInputSize" 
-                            name="size" value="{{size}}">
+                            name="size" value="{{size}}" >
                     </div>
                     <div class="form-group">
                         <label for="exampleInputPassword1">Price</label>
                         <input type="number" class="form-control" id="exampleInputPrice" 
-                            name="price" value="{{price}}">
+                            name="price" value="{{price}}" >
                     </div>
                     <div class="form-group">
                         <label for="exampleInputPassword1">Category</label>
@@ -54,7 +54,7 @@
                     </div>
                     <div class="form-group">
                         <label for="exampleFormControlFile1">Image</label>
-                        <input type="file" name="image" accept="image/*" />
+                        <input type="file" name="image" accept="image/*" >
                         <img style="width: 200px;" src="" class="preview" />
                     </div>
                     <button type="submit" class="btn btn-primary" value="create">Submit</button>
@@ -64,6 +64,7 @@
     </div>
 </div>
 <script>
+    $('#createForm').validator()
     let fileInput = document.forms.createForm.image;
     fileInput.addEventListener('change', () => {
         let file = fileInput.files[0];
