--- a/views/partials/admin/login.hbs
+++ b/views/partials/admin/login.hbs
@@ -12,6 +12,7 @@
     <title>E-Shopper - Login</title>
 
     <!-- Custom fonts for this template-->
+    <!-- CSS only -->
     <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
     <link
         href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
@@ -45,7 +46,7 @@
                                         <div class="form-group">
                                             <input type="email" class="form-control form-control-user"
                                                 id="loginInputEmail" aria-describedby="emailHelp"
-                                                placeholder="Enter Email Address..." >
+                                                placeholder="Enter Email Address...">
                                         </div>
                                         <div class="form-group">
                                             <input type="password" class="form-control form-control-user"
@@ -65,9 +66,6 @@
                                     </form>
                                     <div class="text-center">
                                         <a class="small" href="/admin/register">Tạo tài khoản!</a>
-                                    </div>
-                                    <div class="text-center">
-                                        <a class="small" href="/admin/fogotpassword">Quên mật khẩu!</a>
                                     </div>
                                 </div>
                             </div>
@@ -91,7 +89,8 @@
     <!-- Custom scripts for all pages-->
     <script src="js/sb-admin-2.min.js"></script>
     <script src="/admin/js/auth.js"></script>
-
+<!-- JavaScript Bundle with Popper -->
+    
 </body>
 
 </html>
