--- a/views/partials/frontend/cart.hbs
+++ b/views/partials/frontend/cart.hbs
@@ -2,11 +2,11 @@
 		<div class="container">
 			<div class="breadcrumbs">
 				<ol class="breadcrumb">
-				  <li><a href="#">Trang chủ</a></li>
+				  <li><a href="/">Trang chủ</a></li>
 				  <li class="active">Giỏ hàng</li>
 				</ol>
 			</div>
-			<div class="table-responsive cart_info">
+			<div class="table-responsive cart_info">				
 				<table class="table table-condensed">
 					<thead>
 						<tr class="cart_menu">
@@ -17,88 +17,53 @@
 							<td class="total">Tổng</td>
 							<td></td>
 						</tr>
-					</thead>
+					</thead>			
 					<tbody>
-
-						<tr>							
+						{{# if products }}
+							
+						<tr>										
+							{{#each products }}	
 							<td class="cart_product">
-								<a href=""><img src=""/img/upload/{{image}}"" alt=""></a>
+								<a href=""><img src="/img/upload/{{ this.item.image}}" height="100" width="100"></a>
 							</td>
 							<td class="cart_description">
-								<h4><a href="">{{name}}</a></h4>
-								<p>Web ID: 1089772</p>
+								<h4><a href="">{{ this.item.name }}</a></h4>
+								{{!-- <p>Web ID: 1089772</p> --}}
 							</td>
 							<td class="cart_price">
 								<p>{{price}} VND</p>
 							</td>
 							<td class="cart_quantity">
 								<div class="cart_quantity_button">
-									<a class="cart_quantity_up" href=""> + </a>
-									<input class="cart_quantity_input" type="text" name="quantity" value="{{quantily}}" autocomplete="off" size="3">
-									<a class="cart_quantity_down" href=""> - </a>
+									<a class="cart_quantity_up" href="/removeQuatity/{{this.item.id}}"> - </a>
+									<input class="cart_quantity_input" type="text" name="quantity" value="{{this.quantity}}" autocomplete="off" size="3">
+									<a class="cart_quantity_down" href="/addQuatity/{{this.item.id}}"> + </a>
 								</div>
 							</td>
-							<td class="cart_total">
-								<p class="cart_total_price">$59</p>
-							</td>
-							<td class="cart_delete">
-								<a class="cart_quantity_delete" href=""><i class="fa fa-times"></i></a>
-							</td>
-						</tr>
 
-						<tr>
-							<td class="cart_product">
-								<a href=""><img src="images/cart/two.png" alt=""></a>
-							</td>
-							<td class="cart_description">
-								<h4><a href="">Colorblock Scuba</a></h4>
-								<p>Web ID: 1089772</p>
-							</td>
-							<td class="cart_price">
-								<p>1.000.000 VND</p>
-							</td>
-							<td class="cart_quantity">
-								<div class="cart_quantity_button">
-									<a class="cart_quantity_up" href=""> + </a>
-									<input class="cart_quantity_input" type="text" name="quantity" value="1" autocomplete="off" size="2">
-									<a class="cart_quantity_down" href=""> - </a>
-								</div>
-							</td>
 							<td class="cart_total">
-								<p class="cart_total_price">1.000.000 VND</p>
+								<p class="cart_total_price">{{this.price}}</p>
 							</td>
 							<td class="cart_delete">
-								<a class="cart_quantity_delete" href=""><i class="fa fa-times"></i></a>
+								<a class="cart_quantity_delete" href="/remove/{{this.item.id}}"><i class="fa fa-times"></i></a>
 							</td>
-						</tr>
+								{{/each}}
 
-						<tr>
-							<td class="cart_product">
-								<a href=""><img src="images/cart/three.png" alt=""></a>
-							</td>
-							<td class="cart_description">
-								<h4><a href="">Colorblock Scuba</a></h4>
-								<p>Web ID: 1089772</p>
-							</td>
-							<td class="cart_price">
-								<p>1.000.000 VND</p>
-							</td>
-							<td class="cart_quantity">
-								<div class="cart_quantity_button">
-									<a class="cart_quantity_up" href=""> + </a>
-									<input class="cart_quantity_input" type="text" name="quantity" value="1" autocomplete="off" size="2">
-									<a class="cart_quantity_down" href=""> - </a>
-								</div>
-							</td>
-							<td class="cart_total">
-								<p class="cart_total_price">1.000.000 VND</p>
-							</td>
-							<td class="cart_delete">
-								<a class="cart_quantity_delete" href=""><i class="fa fa-times"></i></a>
-							</td>
 						</tr>
+						{{ else }}
+							Your shopping cart is empty.					
+						{{/if}}
 					</tbody>
 				</table>
+
+					<div class="text-right">
+						<strong>Total: {{ totalPrice }} VND</strong>
+					</div>
+					<hr>
+					<div class="text-right">
+						<a href="/checkout" type="button" class="btn btn-success">Checkout</a>
+					</div>
 			</div>
 		</div>
 	</section>
+
