--- a/views/partials/frontend/header.hbs
+++ b/views/partials/frontend/header.hbs
@@ -44,11 +44,8 @@
 							<li><a href="/account"><i class="fa fa-user"></i> Tài khoản</a></li>
 							<li><a href="#"><i class="fa fa-star"></i> Danh sách</a></li>
 							<li><a href="/checkout"><i class="fa fa-crosshairs"></i> Thanh toán</a></li>
-							<li style="position: relative;"><a href="/cart"><i class="fa fa-shopping-cart"></i> Giỏ hàng  <a style="position: absolute;
-    top: -19px;
-    right: 0;
-    color: red;
-    font-weight: 800;" id="number_item_in_cart">0</a></a> </li>
+							<li style="position: relative;"><a href="/cart"><i class="fa fa-shopping-cart"></i> Giỏ hàng  
+							</a> </li>
 							<li class="LoginHeaderButton"><a href="/login">Đăng nhập</a></li>
 							<li class="LogoutHeaderButton"><a>Đăng xuất</a></li>
 						</ul>
@@ -79,7 +76,6 @@
 							<li class="dropdown"><a href="#">Cửa hàng<i class="fa fa-angle-down"></i></a>
 								<ul role="menu" class="sub-menu">
 									<li><a href="/product">Sản phẩm</a></li>
-									{{!-- <li><a href="/product-detail">Chi tiết sản phẩm</a></li> --}}
 									<li><a href="/checkout">Thanh toán</a></li>
 									<li><a href="/cart">Giỏ hàng</a> </li>
 									<li class="LoginHeaderButton"><a href="/login">Đăng nhập</a></li>
@@ -107,8 +103,3 @@
 	<!--/header-bottom-->
 </header>
 <script src="/js/user/main.js"></script>
-<script>
-	$(document).ready(function () {
-		$("#number_item_in_cart").innerHTML = localStorage.getItem('cart') || 0
-    })	 
-</script>
