--- a/views/admin/client/editclient.hbs
+++ b/views/admin/client/editclient.hbs
@@ -14,7 +14,7 @@
             <div id="dataTable_wrapper" class="dataTables_wrapper dt-bootstrap4">
                 <form>
                    <div class="form-group">
-                        <label for="exampleInputEmail1">Name</label>
+                        <label for="exampleInputEmail1">Id</label>
                         <input type="number" disabled class="form-control" id="exampleInputIdEdit"
                             name="name" value="{{data.id}}">
 
