--- a/views/partials/frontend/sideBar.hbs
+++ b/views/partials/frontend/sideBar.hbs
@@ -123,14 +123,26 @@
 
     <hr class="sidebar-divider">
 
+
+    <div class="sidebar-heading">
+        Quản lý đơn hàng
+    </div>
+
+    <li class="nav-item">
+        <a class="nav-link" href="/admin/order">
+            <i class="fas fa-fw fa-chart-area"></i>
+            <span>Danh sách đơn hàng</span></a>
+    </li>
+    <hr class="sidebar-divider">
+
     <!-- Heading -->
     <div class="sidebar-heading">
-        Quản lý nhân viên
+        Quản lý người dùng
     </div>
     <li class="nav-item">
         <a class="nav-link" href="/admin/client">
             <i class="fas fa-fw fa-chart-area"></i>
-            <span>Danh sách nhân viên</span></a>
+            <span>Danh sách người dùng</span></a>
     </li>
 
 
