--- a/views/partials/frontend/product-detail.hbs
+++ b/views/partials/frontend/product-detail.hbs
@@ -180,7 +180,7 @@
 								<span>
 									<button type="button" class="btn btn-fefault cart" id="button_add_cart">
 										<i class="fa fa-shopping-cart"></i>
-										<a href="/add/{{id}}">Thêm vào giỏ hàng</a>
+										<a href="/add/{{id}}" type="button">Thêm vào giỏ hàng</a>
 										
 									</button>
 								</span>
@@ -202,7 +202,7 @@
 								{{!-- <li><a href="#details" data-toggle="tab">Chi tiết</a></li>
 								<li><a href="#companyprofile" data-toggle="tab">Hồ sơ công ty</a></li>
 								<li><a href="#tag" data-toggle="tab">Tag</a></li> --}}
-								<li class="active"><a href="product/detail/{{id}}/page=1" data-toggle="tab">Nhận xét</a></li>
+								<li class="active"><a href="product/detail/{{id}}?page=1" data-toggle="tab">Nhận xét</a></li>
 							</ul>
 						</div>
 						<div class="tab-content">
