--- a/views/partials/frontend/header.hbs
+++ b/views/partials/frontend/header.hbs
@@ -42,7 +42,7 @@
 					<div class="shop-menu pull-right">
 						<ul class="nav navbar-nav">
 							<li><a href="/account"><i class="fa fa-user"></i> Tài khoản</a></li>
-							<li><a href="#"><i class="fa fa-star"></i> Danh sách</a></li>
+							<li><a href="/history"><i class="fa fa-star"></i> Danh sách</a></li>
 							<li><a href="/checkout"><i class="fa fa-crosshairs"></i> Thanh toán</a></li>
 							<li style="position: relative;"><a href="/cart"><i class="fa fa-shopping-cart"></i> Giỏ hàng  
 							</a> </li>
