edit prepare submit

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -18,7 +18,7 @@
 								<h1><span>E</span>-SHOPPER</h1>
 								<h2>Cửa hàng thời trang</h2>
 								<p>Shopping giúp giảm căng thẳng.</p>
-								<button type="button" class="btn btn-default get">Mua ngay</button>
+								{{!-- <button type="button" class="btn btn-default get">Mua ngay</button> --}}
 							</div>
 							<div class="col-sm-6">
 								<img src="images/home/girl1.jpg" class="girl img-responsive" alt="" />
@@ -30,7 +30,7 @@
 								<h1><span>E</span>-SHOPPER</h1>
 								<h2>100% cotton</h2>
 								<p>Shopping giúp giảm căng thẳng. </p>
-								<button type="button" class="btn btn-default get">Mua ngay</button>
+								{{!-- <button type="button" class="btn btn-default get">Mua ngay</button> --}}
 							</div>
 							<div class="col-sm-6">
 								<img src="images/home/girl2.jpg" class="girl img-responsive" alt="" />
@@ -43,7 +43,7 @@
 								<h1><span>E</span>-SHOPPER</h1>
 								<h2>Những trang phục mùa hè không thể bỏ qua</h2>
 								<p>Shopping giúp giảm căng thẳng. </p>
-								<button type="button" class="btn btn-default get">Mua ngay</button>
+								{{!-- <button type="button" class="btn btn-default get">Mua ngay</button> --}}
 							</div>
 							<div class="col-sm-6">
 								<img src="images/home/girl3.jpg" class="girl img-responsive" alt="" />
@@ -114,16 +114,6 @@
 							</div>											
 						</div><!--/brands_products-->
 						
-					<div class="price-range">
-						<!--price-range-->
-						<h2>Phạm vi giá</h2>
-						<div class="well text-center">
-							<input type="text" class="span2" value="" data-slider-min="0" data-slider-max="10000000"
-								data-slider-step="5" data-slider-value="[250,450]" id="sl2"><br />
-							<b class="pull-left">0</b> <b class="pull-right">10 triệu</b>
-						</div>
-					</div>
-					<!--/price-range-->
 
 					<div class="shipping text-center">
 						<!--shipping-->
