--- a/views/partials/frontend/footer.hbs
+++ b/views/partials/frontend/footer.hbs
@@ -11,9 +11,9 @@
 					<div class="col-sm-7">
 						<div class="col-sm-3">
 							<div class="video-gallery text-center">
-								<a href="#">
+								<a >
 									<div class="iframe-img">
-										<img src="images/home/iframe1.png" alt="" />
+										<img src="/images/home/iframe1.png" alt="" />
 									</div>
 									<div class="overlay-icon">
 										<i class="fa fa-play-circle-o"></i>
@@ -26,9 +26,9 @@
 						
 						<div class="col-sm-3">
 							<div class="video-gallery text-center">
-								<a href="#">
+								<a >
 									<div class="iframe-img">
-										<img src="images/home/iframe2.png" alt="" />
+										<img src="/images/home/iframe2.png" alt="" />
 									</div>
 									<div class="overlay-icon">
 										<i class="fa fa-play-circle-o"></i>
@@ -41,9 +41,9 @@
 						
 						<div class="col-sm-3">
 							<div class="video-gallery text-center">
-								<a href="#">
+								<a >
 									<div class="iframe-img">
-										<img src="images/home/iframe3.png" alt="" />
+										<img src="/images/home/iframe3.png" alt="" />
 									</div>
 									<div class="overlay-icon">
 										<i class="fa fa-play-circle-o"></i>
@@ -56,9 +56,9 @@
 						
 						<div class="col-sm-3">
 							<div class="video-gallery text-center">
-								<a href="#">
+								<a >
 									<div class="iframe-img">
-										<img src="images/home/iframe4.png" alt="" />
+										<img src="/images/home/iframe4.png" alt="" />
 									</div>
 									<div class="overlay-icon">
 										<i class="fa fa-play-circle-o"></i>
@@ -79,71 +79,7 @@
 			</div>
 		</div>
 		
-		<div class="footer-widget">
-			<div class="container">
-				<div class="row">
-					<div class="col-sm-2">
-						<div class="single-widget">
-							<h2>Dịch vụ</h2>
-							<ul class="nav nav-pills nav-stacked">
-								<li><a href="#">Trợ giúp online</a></li>
-								<li><a href="#">Liên hệ chúng tôi</a></li>
-								<li><a href="#">Tình trạng đặt hàng</a></li>
-								<li><a href="#">Thay đổi vị trí</a></li>
-								<li><a href="#">FAQ’s</a></li>
-							</ul>
-						</div>
-					</div>
-					<div class="col-sm-2">
-						<div class="single-widget">
-							<h2>Mua sắm nhanh</h2>
-							<ul class="nav nav-pills nav-stacked">
-								<li><a href="#">Trẻ em</a></li>
-								<li><a href="#">Nam</a></li>
-								<li><a href="#">Nữ</a></li>
-								<li><a href="#">Thẻ quà tặng</a></li>
-							</ul>
-						</div>
-					</div>
-					<div class="col-sm-2">
-						<div class="single-widget">
-							<h2>Chính sách</h2>
-							<ul class="nav nav-pills nav-stacked">
-								<li><a href="#">Điều khoản sử dụng</a></li>
-								<li><a href="#">Chính sách bảo mật</a></li>
-								<li><a href="#">Chính sách hoàn lại tiền</a></li>
-								<li><a href="#">Hệ thống thanh toán</a></li>
-								<li><a href="#">Hệ thống vé</a></li>
-							</ul>
-						</div>
-					</div>
-					<div class="col-sm-2">
-						<div class="single-widget">
-							<h2>Thông tin về Shopper</h2>
-							<ul class="nav nav-pills nav-stacked">
-								<li><a href="#">Thông tin cty</a></li>
-								<li><a href="#">Careers</a></li>
-								<li><a href="#">Vị trí cửa hàng</a></li>
-								<li><a href="#">Chương trình liên kết</a></li>
-								<li><a href="#">Copyright</a></li>
-							</ul>
-						</div>
-					</div>
-					<div class="col-sm-3 col-sm-offset-1">
-						<div class="single-widget">
-							<h2>Địa chỉ email của bạn</h2>
-							<form action="#" class="searchform">
-								<input type="text" placeholder="Email của bạn" />
-								<button type="submit" class="btn btn-default"><i class="fa fa-arrow-circle-o-right"></i></button>
-								<p>Thông tin các sản phẩm mới nhất <br />của chúng tôi sẽ gửi cho bạn.</p>
-							</form>
-						</div>
-					</div>
-					
-				</div>
-			</div>
-		</div>
-		
+	
 		<div class="footer-bottom">
 			<div class="container">
 				<div class="row">
