--- a/views/partials/frontend/header.hbs
+++ b/views/partials/frontend/header.hbs
@@ -8,19 +8,18 @@
 				<div class="col-sm-6">
 					<div class="contactinfo">
 						<ul class="nav nav-pills">
-							<li><a href="#"><i class="fa fa-phone"></i> +84 123456789</a></li>
-							<li><a href="#"><i class="fa fa-envelope"></i> eshopper@gmail.com</a></li>
+							<li><a ><i class="fa fa-envelope"></i> sonadweb2022@gmail.com</a></li>
 						</ul>
 					</div>
 				</div>
 				<div class="col-sm-6">
 					<div class="social-icons pull-right">
 						<ul class="nav navbar-nav">
-							<li><a href="#"><i class="fa fa-facebook"></i></a></li>
-							<li><a href="#"><i class="fa fa-twitter"></i></a></li>
-							<li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-							<li><a href="#"><i class="fa fa-dribbble"></i></a></li>
-							<li><a href="#"><i class="fa fa-google-plus"></i></a></li>
+							<li><a ><i class="fa fa-facebook"></i></a></li>
+							<li><a ><i class="fa fa-twitter"></i></a></li>
+							<li><a ><i class="fa fa-linkedin"></i></a></li>
+							<li><a ><i class="fa fa-dribbble"></i></a></li>
+							<li><a ><i class="fa fa-google-plus"></i></a></li>
 						</ul>
 					</div>
 				</div>
@@ -35,14 +34,14 @@
 			<div class="row">
 				<div class="col-sm-4">
 					<div class="logo pull-left">
-						<a href="/"><img src="images/home/logo.png" alt="" /></a>
+						<a href="/"><img src="/images/home/logo.png" alt="" /></a>
 					</div>
 				</div>
 				<div class="col-sm-8">
 					<div class="shop-menu pull-right">
 						<ul class="nav navbar-nav">
 							<li><a href="/account"><i class="fa fa-user"></i> Tài khoản</a></li>
-							<li><a href="/history"><i class="fa fa-star"></i> Danh sách</a></li>
+							<li><a href="/history"><i class="fa fa-star"></i> Danh sách đơn hàng</a></li>
 							<li><a href="/checkout"><i class="fa fa-crosshairs"></i> Thanh toán</a></li>
 							<li style="position: relative;"><a href="/cart"><i class="fa fa-shopping-cart"></i> Giỏ hàng  
 							</a> </li>
@@ -82,12 +81,6 @@
 									<li class="LogoutHeaderButton"><a href="/auth/logout">Đăng xuất</a></li>
 								</ul>
 							</li>
-							<li class="dropdown"><a href="#">Bài viết<i class="fa fa-angle-down"></i></a>
-								<ul role="menu" class="sub-menu">
-									<li><a href="/blog">Danh sách bài viết</a></li>
-								</ul>
-							</li>
-							<li><a href="/contact">Liên hệ</a></li>
 						</ul>
 					</div>
 				</div>
