--- a/views/partials/frontend/product-detail.hbs
+++ b/views/partials/frontend/product-detail.hbs
@@ -75,13 +75,7 @@
 						</div><!--/brands_products-->
 						
 						
-						<div class="price-range"><!--price-range-->
-							<h2>Phạm vi giá</h2>
-							<div class="well text-center">
-								 <div class="slider slider-horizontal" style="width: 178px;"><div class="slider-track"><div class="slider-selection" style="left: 0.0025%; width: 0.002%;"></div><div class="slider-handle round left-round" style="left: 0.0025%;"></div><div class="slider-handle round" style="left: 0.0045%;"></div></div><div class="tooltip top" style="top: -30px; left: -32.9938px;"><div class="tooltip-arrow"></div><div class="tooltip-inner">250 : 450</div></div><input type="text" class="span2" value="" data-slider-min="0" data-slider-max="10000000" data-slider-step="5" data-slider-value="[250,450]" id="sl2" style=""></div><br>
-								 <b class="pull-left">0</b> <b class="pull-right">10 triệu</b>
-							</div>
-						</div><!--/price-range-->
+
 						
 						<div class="shipping text-center"><!--shipping-->
 							<img src="images/home/shipping.jpg" alt="">
@@ -95,7 +89,7 @@
 						<div class="col-sm-5">
 							<div class="view-product">
 								<img src="/img/upload/{{image}}" alt="">
-								<h3>ZOOM</h3>
+								
 							</div>
 							{{!-- <div id="similar-product" class="carousel slide" data-ride="carousel">
 								
@@ -500,6 +494,11 @@
 	 $("#changPage").click(function(){
 		 console.log("click")
 	 });
+	</script>
+	<script>
+		    $('#button_add_cart').click(()=>{
+        alert("Đã thêm vào giỏ hàng!")
+    })
 	</script>
 <script src="js/jquery.js"></scrip>
 <script src="js/bootstrap.min.js"></scrip>
