--- a/views/partials/frontend/product-detail.hbs
+++ b/views/partials/frontend/product-detail.hbs
@@ -196,7 +196,7 @@
 								{{!-- <li><a href="#details" data-toggle="tab">Chi tiết</a></li>
 								<li><a href="#companyprofile" data-toggle="tab">Hồ sơ công ty</a></li>
 								<li><a href="#tag" data-toggle="tab">Tag</a></li> --}}
-								<li class="active"><a href="product/detail/{{id}}?page=1" data-toggle="tab">Nhận xét</a></li>
+								<li class="active"><a href="?page=1" data-toggle="tab">Nhận xét</a></li>
 							</ul>
 						</div>
 						<div class="tab-content">
