--- a/views/admin/products/edit.hbs
+++ b/views/admin/products/edit.hbs
@@ -26,7 +26,7 @@
                     </div>
                     <div class="form-group">
                         <label for="exampleInputPassword1">Size</label>
-                        <input type="number" class="form-control" id="exampleInputSize" name="size" value="{{size}}">
+                        <input type="text" class="form-control" id="exampleInputSize" name="size" value="{{size}}">
                     </div>
                       <div class="form-group">
                         <label for="exampleInputPassword1">Price</label>
