--- a/views/index.hbs
+++ b/views/index.hbs
@@ -169,8 +169,8 @@
 					<div class="col-sm-12">
 						<ul class="nav nav-tabs">
 							<li class="active"><a href="#tshirt" data-toggle="tab">Áo</a></li>
-							<li><a href="#blazers" data-toggle="tab">Quần</a></li>
-							<li><a href="#sunglass" data-toggle="tab">Giày</a></li>
+							<li><a href="#blazers" data-toggle="tab">Giày</a></li>
+							<li><a href="#sunglass" data-toggle="tab">Quần</a></li>
 							<li><a href="#kids" data-toggle="tab">Trẻ em</a></li>
 							<li><a href="#poloshirt" data-toggle="tab">Thể Thao</a></li>
 						</ul>
