--- a/views/index.hbs
+++ b/views/index.hbs
@@ -301,7 +301,7 @@
 										<div class="single-products">
 											<div class="productinfo text-center">
 												<img src="/img/upload/{{image}}" alt="" width="255.48" height="255.48"/>
-												<h2>${{price}}</h2>
+												<h2>{{price}}</h2>
 												<p>{{name}}</p>
 												<a href="/product/detail/{{id}}" class="btn btn-default add-to-cart"><i
 														class="fa fa-shopping-cart"></i>Xem Chi Tiết</a>
